--- a/rootdir/etc/init.mt6877.usb.rc
+++ b/rootdir/etc/init.mt6877.usb.rc
@@ -29,6 +29,8 @@ on post-fs
     symlink /config/usb_gadget/g1/configs/b.1 /config/usb_gadget/g1/os_desc/b.1
     mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
 
+    setprop sys.usb.mtp.device_type 3
+
     # ncm function
     mkdir /config/usb_gadget/g1/functions/ncm.gs9
     write /config/usb_gadget/g1/functions/ncm.gs9/os_desc/interface.ncm/compatible_id WINNCM
